parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     program -> empty
Rule 3     statements -> statement
Rule 4     statements -> statements statement
Rule 5     statements -> empty
Rule 6     statement -> expression
Rule 7     statement -> declaration
Rule 8     statement -> assignment
Rule 9     statement -> method_call
Rule 10    statement -> expression SEMICOLON
Rule 11    statement -> declaration SEMICOLON
Rule 12    statement -> assignment SEMICOLON
Rule 13    statement -> method_call SEMICOLON
Rule 14    statement -> function_declaration
Rule 15    statement -> if_statement
Rule 16    statement -> while_statement
Rule 17    statement -> for_statement
Rule 18    statement -> break_statement
Rule 19    statement -> switch_statement
Rule 20    statement -> try_catch_statement
Rule 21    statement -> throw_statement
Rule 22    function_declaration -> FUNCTION ID LPAREN parameter_list RPAREN block
Rule 23    parameter_list -> <empty>
Rule 24    parameter_list -> ID
Rule 25    parameter_list -> parameter_list COMMA ID
Rule 26    statement -> RETURN expression SEMICOLON
Rule 27    declaration -> VAR ID
Rule 28    declaration -> LET ID
Rule 29    declaration -> CONST ID
Rule 30    declaration -> VAR ID ASSIGN expression
Rule 31    declaration -> LET ID ASSIGN expression
Rule 32    declaration -> CONST ID ASSIGN expression
Rule 33    assignment -> ID ASSIGN expression
Rule 34    expression -> expression QUESTION expression COLON expression
Rule 35    expression -> term
Rule 36    expression -> expression PLUS term
Rule 37    expression -> expression MINUS term
Rule 38    expression -> expression GT term
Rule 39    expression -> expression LT term
Rule 40    expression -> expression GE term
Rule 41    expression -> expression LE term
Rule 42    expression -> expression EQUALS term
Rule 43    expression -> expression NOTEQUALS term
Rule 44    expression -> expression AND term
Rule 45    expression -> expression OR term
Rule 46    expression -> array_literal
Rule 47    expression -> array_access
Rule 48    term -> factor
Rule 49    term -> term TIMES factor
Rule 50    term -> term DIVIDE factor
Rule 51    factor -> NUMBER
Rule 52    factor -> STRING
Rule 53    factor -> ID
Rule 54    factor -> LPAREN expression RPAREN
Rule 55    factor -> method_call
Rule 56    factor -> function_call
Rule 57    factor -> array_access
Rule 58    factor -> property_access
Rule 59    factor -> NOT factor
Rule 60    factor -> object_literal
Rule 61    factor -> arrow_function
Rule 62    factor -> anonymous_function
Rule 63    factor -> TRUE
Rule 64    factor -> FALSE
Rule 65    function_call -> ID LPAREN arguments RPAREN
Rule 66    method_call -> console_log
Rule 67    method_call -> ID DOT ID LPAREN arguments RPAREN
Rule 68    console_log -> CONSOLE DOT LOG LPAREN arguments RPAREN
Rule 69    arguments -> <empty>
Rule 70    arguments -> expression
Rule 71    arguments -> arguments COMMA expression
Rule 72    if_statement -> IF LPAREN condition RPAREN block
Rule 73    if_statement -> IF LPAREN condition RPAREN block ELSE block
Rule 74    condition -> expression
Rule 75    condition -> expression GT expression
Rule 76    condition -> expression LT expression
Rule 77    condition -> expression GE expression
Rule 78    condition -> expression LE expression
Rule 79    condition -> expression EQUALS expression
Rule 80    condition -> expression NOTEQUALS expression
Rule 81    array_literal -> LBRACKET array_elements RBRACKET
Rule 82    array_elements -> <empty>
Rule 83    array_elements -> expression
Rule 84    array_elements -> array_elements COMMA expression
Rule 85    array_access -> ID LBRACKET expression RBRACKET
Rule 86    while_statement -> WHILE LPAREN condition RPAREN block
Rule 87    block -> LBRACE statements RBRACE
Rule 88    empty -> <empty>
Rule 89    property_access -> ID DOT ID
Rule 90    break_statement -> BREAK SEMICOLON
Rule 91    for_statement -> FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
Rule 92    for_init -> declaration
Rule 93    for_init -> assignment
Rule 94    for_init -> empty
Rule 95    for_condition -> expression
Rule 96    for_condition -> empty
Rule 97    for_update -> assignment
Rule 98    for_update -> expression
Rule 99    for_update -> empty
Rule 100   object_literal -> LBRACE object_properties RBRACE
Rule 101   object_properties -> object_property
Rule 102   object_properties -> object_properties COMMA object_property
Rule 103   object_properties -> empty
Rule 104   object_property -> ID COLON expression
Rule 105   arrow_function -> LPAREN parameter_list RPAREN ARROW expression
Rule 106   switch_statement -> SWITCH LPAREN expression RPAREN LBRACE case_blocks default_block RBRACE
Rule 107   case_blocks -> case_blocks case_block
Rule 108   case_blocks -> case_block
Rule 109   case_block -> CASE error COLON
Rule 110   case_block -> CASE expression COLON statements
Rule 111   default_block -> DEFAULT COLON statements
Rule 112   default_block -> empty
Rule 113   anonymous_function -> FUNCTION LPAREN parameter_list RPAREN block
Rule 114   try_catch_statement -> TRY block CATCH LPAREN ID RPAREN block
Rule 115   throw_statement -> THROW expression SEMICOLON
Rule 116   if_statement -> IF error block
Rule 117   declaration -> VAR error
Rule 118   declaration -> LET error
Rule 119   declaration -> CONST error
Rule 120   switch_statement -> SWITCH error block
Rule 121   for_statement -> FOR error block
Rule 122   if_statement -> IF LPAREN error block
Rule 123   block -> LBRACE statements error
Rule 124   function_declaration -> FUNCTION ID LPAREN error RPAREN block
Rule 125   case_block -> CASE error COLON statements
Rule 126   switch_statement -> SWITCH LPAREN error RPAREN LBRACE case_blocks default_block RBRACE

Terminals, with rules where they appear

AND                  : 44
ARROW                : 105
ASSIGN               : 30 31 32 33
BREAK                : 90
CASE                 : 109 110 125
CATCH                : 114
COLON                : 34 104 109 110 111 125
COMMA                : 25 71 84 102
CONSOLE              : 68
CONST                : 29 32 119
DEFAULT              : 111
DIVIDE               : 50
DOT                  : 67 68 89
ELSE                 : 73
EQUALS               : 42 79
FALSE                : 64
FOR                  : 91 121
FUNCTION             : 22 113 124
GE                   : 40 77
GT                   : 38 75
ID                   : 22 24 25 27 28 29 30 31 32 33 53 65 67 67 85 89 89 104 114 124
IF                   : 72 73 116 122
LBRACE               : 87 100 106 123 126
LBRACKET             : 81 85
LE                   : 41 78
LET                  : 28 31 118
LOG                  : 68
LPAREN               : 22 54 65 67 68 72 73 86 91 105 106 113 114 122 124 126
LT                   : 39 76
MINUS                : 37
NOT                  : 59
NOTEQUALS            : 43 80
NUMBER               : 51
OR                   : 45
PLUS                 : 36
QUESTION             : 34
RBRACE               : 87 100 106 126
RBRACKET             : 81 85
RETURN               : 26
RPAREN               : 22 54 65 67 68 72 73 86 91 105 106 113 114 124 126
SEMICOLON            : 10 11 12 13 26 90 91 91 115
STRING               : 52
SWITCH               : 106 120 126
THROW                : 115
TIMES                : 49
TRUE                 : 63
TRY                  : 114
VAR                  : 27 30 117
WHILE                : 86
error                : 109 116 117 118 119 120 121 122 123 124 125 126

Nonterminals, with rules where they appear

anonymous_function   : 62
arguments            : 65 67 68 71
array_access         : 47 57
array_elements       : 81 84
array_literal        : 46
arrow_function       : 61
assignment           : 8 12 93 97
block                : 22 72 73 73 86 91 113 114 114 116 120 121 122 124
break_statement      : 18
case_block           : 107 108
case_blocks          : 106 107 126
condition            : 72 73 86
console_log          : 66
declaration          : 7 11 92
default_block        : 106 126
empty                : 2 5 94 96 99 103 112
expression           : 6 10 26 30 31 32 33 34 34 34 36 37 38 39 40 41 42 43 44 45 54 70 71 74 75 75 76 76 77 77 78 78 79 79 80 80 83 84 85 95 98 104 105 106 110 115
factor               : 48 49 50 59
for_condition        : 91
for_init             : 91
for_statement        : 17
for_update           : 91
function_call        : 56
function_declaration : 14
if_statement         : 15
method_call          : 9 13 55
object_literal       : 60
object_properties    : 100 102
object_property      : 101 102
parameter_list       : 22 25 105 113
program              : 0
property_access      : 58
statement            : 3 4
statements           : 1 4 87 110 111 123 125
switch_statement     : 19
term                 : 35 36 37 38 39 40 41 42 43 44 45 49 50
throw_statement      : 21
try_catch_statement  : 20
while_statement      : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) program -> . empty
    (3) statements -> . statement
    (4) statements -> . statements statement
    (5) statements -> . empty
    (88) empty -> .
    (6) statement -> . expression
    (7) statement -> . declaration
    (8) statement -> . assignment
    (9) statement -> . method_call
    (10) statement -> . expression SEMICOLON
    (11) statement -> . declaration SEMICOLON
    (12) statement -> . assignment SEMICOLON
    (13) statement -> . method_call SEMICOLON
    (14) statement -> . function_declaration
    (15) statement -> . if_statement
    (16) statement -> . while_statement
    (17) statement -> . for_statement
    (18) statement -> . break_statement
    (19) statement -> . switch_statement
    (20) statement -> . try_catch_statement
    (21) statement -> . throw_statement
    (26) statement -> . RETURN expression SEMICOLON
    (34) expression -> . expression QUESTION expression COLON expression
    (35) expression -> . term
    (36) expression -> . expression PLUS term
    (37) expression -> . expression MINUS term
    (38) expression -> . expression GT term
    (39) expression -> . expression LT term
    (40) expression -> . expression GE term
    (41) expression -> . expression LE term
    (42) expression -> . expression EQUALS term
    (43) expression -> . expression NOTEQUALS term
    (44) expression -> . expression AND term
    (45) expression -> . expression OR term
    (46) expression -> . array_literal
    (47) expression -> . array_access
    (27) declaration -> . VAR ID
    (28) declaration -> . LET ID
    (29) declaration -> . CONST ID
    (30) declaration -> . VAR ID ASSIGN expression
    (31) declaration -> . LET ID ASSIGN expression
    (32) declaration -> . CONST ID ASSIGN expression
    (117) declaration -> . VAR error
    (118) declaration -> . LET error
    (119) declaration -> . CONST error
    (33) assignment -> . ID ASSIGN expression
    (66) method_call -> . console_log
    (67) method_call -> . ID DOT ID LPAREN arguments RPAREN
    (22) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (124) function_declaration -> . FUNCTION ID LPAREN error RPAREN block
    (72) if_statement -> . IF LPAREN condition RPAREN block
    (73) if_statement -> . IF LPAREN condition RPAREN block ELSE block
    (116) if_statement -> . IF error block
    (122) if_statement -> . IF LPAREN error block
    (86) while_statement -> . WHILE LPAREN condition RPAREN block
    (91) for_statement -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
    (121) for_statement -> . FOR error block
    (90) break_statement -> . BREAK SEMICOLON
    (106) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_blocks default_block RBRACE
    (120) switch_statement -> . SWITCH error block
    (126) switch_statement -> . SWITCH LPAREN error RPAREN LBRACE case_blocks default_block RBRACE
    (114) try_catch_statement -> . TRY block CATCH LPAREN ID RPAREN block
    (115) throw_statement -> . THROW expression SEMICOLON
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (81) array_literal -> . LBRACKET array_elements RBRACKET
    (85) array_access -> . ID LBRACKET expression RBRACKET
    (68) console_log -> . CONSOLE DOT LOG LPAREN arguments RPAREN
    (51) factor -> . NUMBER
    (52) factor -> . STRING
    (53) factor -> . ID
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . method_call
    (56) factor -> . function_call
    (57) factor -> . array_access
    (58) factor -> . property_access
    (59) factor -> . NOT factor
    (60) factor -> . object_literal
    (61) factor -> . arrow_function
    (62) factor -> . anonymous_function
    (63) factor -> . TRUE
    (64) factor -> . FALSE
    (65) function_call -> . ID LPAREN arguments RPAREN
    (89) property_access -> . ID DOT ID
    (100) object_literal -> . LBRACE object_properties RBRACE
    (105) arrow_function -> . LPAREN parameter_list RPAREN ARROW expression
    (113) anonymous_function -> . FUNCTION LPAREN parameter_list RPAREN block

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for TRY resolved as shift
  ! shift/reduce conflict for THROW resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for CONSOLE resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    $end            reduce using rule 88 (empty -> .)
    RETURN          shift and go to state 17
    VAR             shift and go to state 21
    LET             shift and go to state 23
    CONST           shift and go to state 24
    ID              shift and go to state 22
    FUNCTION        shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    BREAK           shift and go to state 31
    SWITCH          shift and go to state 32
    TRY             shift and go to state 34
    THROW           shift and go to state 35
    LBRACKET        shift and go to state 37
    CONSOLE         shift and go to state 38
    NUMBER          shift and go to state 39
    STRING          shift and go to state 40
    LPAREN          shift and go to state 26
    NOT             shift and go to state 43
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    LBRACE          shift and go to state 33

  ! RETURN          [ reduce using rule 88 (empty -> .) ]
  ! VAR             [ reduce using rule 88 (empty -> .) ]
  ! LET             [ reduce using rule 88 (empty -> .) ]
  ! CONST           [ reduce using rule 88 (empty -> .) ]
  ! ID              [ reduce using rule 88 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 88 (empty -> .) ]
  ! IF              [ reduce using rule 88 (empty -> .) ]
  ! WHILE           [ reduce using rule 88 (empty -> .) ]
  ! FOR             [ reduce using rule 88 (empty -> .) ]
  ! BREAK           [ reduce using rule 88 (empty -> .) ]
  ! SWITCH          [ reduce using rule 88 (empty -> .) ]
  ! TRY             [ reduce using rule 88 (empty -> .) ]
  ! THROW           [ reduce using rule 88 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 88 (empty -> .) ]
  ! CONSOLE         [ reduce using rule 88 (empty -> .) ]
  ! NUMBER          [ reduce using rule 88 (empty -> .) ]
  ! STRING          [ reduce using rule 88 (empty -> .) ]
  ! LPAREN          [ reduce using rule 88 (empty -> .) ]
  ! NOT             [ reduce using rule 88 (empty -> .) ]
  ! TRUE            [ reduce using rule 88 (empty -> .) ]
  ! FALSE           [ reduce using rule 88 (empty -> .) ]
  ! LBRACE          [ reduce using rule 88 (empty -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    expression                     shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    method_call                    shift and go to state 8
    function_declaration           shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    break_statement                shift and go to state 13
    switch_statement               shift and go to state 14
    try_catch_statement            shift and go to state 15
    throw_statement                shift and go to state 16
    term                           shift and go to state 18
    array_literal                  shift and go to state 19
    array_access                   shift and go to state 20
    console_log                    shift and go to state 25
    factor                         shift and go to state 36
    function_call                  shift and go to state 41
    property_access                shift and go to state 42
    object_literal                 shift and go to state 44
    arrow_function                 shift and go to state 45
    anonymous_function             shift and go to state 46

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (4) statements -> statements . statement
    (6) statement -> . expression
    (7) statement -> . declaration
    (8) statement -> . assignment
    (9) statement -> . method_call
    (10) statement -> . expression SEMICOLON
    (11) statement -> . declaration SEMICOLON
    (12) statement -> . assignment SEMICOLON
    (13) statement -> . method_call SEMICOLON
    (14) statement -> . function_declaration
    (15) statement -> . if_statement
    (16) statement -> . while_statement
    (17) statement -> . for_statement
    (18) statement -> . break_statement
    (19) statement -> . switch_statement
    (20) statement -> . try_catch_statement
    (21) statement -> . throw_statement
    (26) statement -> . RETURN expression SEMICOLON
    (34) expression -> . expression QUESTION expression COLON expression
    (35) expression -> . term
    (36) expression -> . expression PLUS term
    (37) expression -> . expression MINUS term
    (38) expression -> . expression GT term
    (39) expression -> . expression LT term
    (40) expression -> . expression GE term
    (41) expression -> . expression LE term
    (42) expression -> . expression EQUALS term
    (43) expression -> . expression NOTEQUALS term
    (44) expression -> . expression AND term
    (45) expression -> . expression OR term
    (46) expression -> . array_literal
    (47) expression -> . array_access
    (27) declaration -> . VAR ID
    (28) declaration -> . LET ID
    (29) declaration -> . CONST ID
    (30) declaration -> . VAR ID ASSIGN expression
    (31) declaration -> . LET ID ASSIGN expression
    (32) declaration -> . CONST ID ASSIGN expression
    (117) declaration -> . VAR error
    (118) declaration -> . LET error
    (119) declaration -> . CONST error
    (33) assignment -> . ID ASSIGN expression
    (66) method_call -> . console_log
    (67) method_call -> . ID DOT ID LPAREN arguments RPAREN
    (22) function_declaration -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (124) function_declaration -> . FUNCTION ID LPAREN error RPAREN block
    (72) if_statement -> . IF LPAREN condition RPAREN block
    (73) if_statement -> . IF LPAREN condition RPAREN block ELSE block
    (116) if_statement -> . IF error block
    (122) if_statement -> . IF LPAREN error block
    (86) while_statement -> . WHILE LPAREN condition RPAREN block
    (91) for_statement -> . FOR LPAREN for_init SEMICOLON for_condition SEMICOLON for_update RPAREN block
    (121) for_statement -> . FOR error block
    (90) break_statement -> . BREAK SEMICOLON
    (106) switch_statement -> . SWITCH LPAREN expression RPAREN LBRACE case_blocks default_block RBRACE
    (120) switch_statement -> . SWITCH error block
    (126) switch_statement -> . SWITCH LPAREN error RPAREN LBRACE case_blocks default_block RBRACE
    (114) try_catch_statement -> . TRY block CATCH LPAREN ID RPAREN block
    (115) throw_statement -> . THROW expression SEMICOLON
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (81) array_literal -> . LBRACKET array_elements RBRACKET
    (85) array_access -> . ID LBRACKET expression RBRACKET
    (68) console_log -> . CONSOLE DOT LOG LPAREN arguments RPAREN
    (51) factor -> . NUMBER
    (52) factor -> . STRING
    (53) factor -> . ID
    (54) factor -> . LPAREN expression RPAREN
    (55) factor -> . method_call
    (56) factor -> . function_call
    (57) factor -> . array_access
    (58) factor -> . property_access
    (59) factor -> . NOT factor
    (60) factor -> . object_literal
    (61) factor -> . arrow_function
    (62) factor -> . anonymous_function
    (63) factor -> . TRUE
    (64) factor -> . FALSE
    (65) function_call -> . ID LPAREN arguments RPAREN
    (89) property_access -> . ID DOT ID
    (100) object_literal -> . LBRACE object_properties RBRACE
    (105) arrow_function -> . LPAREN parameter_list RPAREN ARROW expression
    (113) anonymous_function -> . FUNCTION LPAREN parameter_list RPAREN block

    $end            reduce using rule 1 (program -> statements .)
    RETURN          shift and go to state 17
    VAR             shift and go to state 21
    LET             shift and go to state 23
    CONST           shift and go to state 24
    ID              shift and go to state 22
    FUNCTION        shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    BREAK           shift and go to state 31
    SWITCH          shift and go to state 32
    TRY             shift and go to state 34
    THROW           shift and go to state 35
    LBRACKET        shift and go to state 37
    CONSOLE         shift and go to state 38
    NUMBER          shift and go to state 39
    STRING          shift and go to state 40
    LPAREN          shift and go to state 26
    NOT             shift and go to state 43
    TRUE            shift and go to state 47
    FALSE           shift and go to state 48
    LBRACE          shift and go to state 33

    statement                      shift and go to state 49
    expression                     shift and go to state 5
    declaration                    shift and go to state 6
    assignment                     shift and go to state 7
    method_call                    shift and go to state 8
    function_declaration           shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    break_statement                shift and go to state 13
    switch_statement               shift and go to state 14
    try_catch_statement            shift and go to state 15
    throw_statement                shift and go to state 16
    term                           shift and go to state 18
    array_literal                  shift and go to state 19
    array_access                   shift and go to state 20
    console_log                    shift and go to state 25
    factor                         shift and go to state 36
    function_call                  shift and go to state 41
    property_access                shift and go to state 42
    object_literal                 shift and go to state 44
    arrow_function                 shift and go to state 45
    anonymous_function             shift and go to state 46

state 3

    (2) program -> empty .
    (5) statements -> empty .

  ! reduce/reduce conflict for $end resolved using rule 2 (program -> empty .)
    $end            reduce using rule 2 (program -> empty .)
    RETURN          reduce using rule 5 (statements -> empty .)
    VAR             reduce using rule 5 (statements -> empty .)
    LET             reduce using rule 5 (statements -> empty .)
    CONST           reduce using rule 5 (statements -> empty .)
    ID              reduce using rule 5 (statements -> empty .)
    FUNCTION        reduce using rule 5 (statements -> empty .)
    IF              reduce using rule 5 (statements -> empty .)
    WHILE           reduce using rule 5 (statements -> empty .)
    FOR             reduce using rule 5 (statements -> empty .)
    BREAK           reduce using rule 5 (statements -> empty .)
    SWITCH          reduce using rule 5 (statements -> empty .)
    TRY             reduce using rule 5 (statements -> empty .)
    THROW           reduce using rule 5 (statements -> empty .)
    LBRACKET        reduce using rule 5 (statements -> empty .)
    CONSOLE         reduce using rule 5 (statements -> empty .)
    NUMBER          reduce using rule 5 (statements -> empty .)
    STRING          reduce using rule 5 (statements -> empty .)
    LPAREN          reduce using rule 5 (statements -> empty .)
    NOT             reduce using rule 5 (statements -> empty .)
    TRUE            reduce using rule 5 (statements -> empty .)
    FALSE           reduce using rule 5 (statements -> empty .)
    LBRACE          reduce using rule 5 (statements -> empty .)

  ! $end            [ reduce using rule 5 (statements -> empty .) ]


state 4

    (3) statements -> statement .

    RETURN          reduce using rule 3 (statements -> statement .)
    VAR             reduce using rule 3 (statements -> statement .)
    LET             reduce using rule 3 (statements -> statement .)
    CONST           reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    SWITCH          reduce using rule 3 (statements -> statement .)
    TRY             reduce using rule 3 (statements -> statement .)
    THROW           reduce using rule 3 (statements -> statement .)
    LBRACKET        reduce using rule 3 (statements -> statement .)
    CONSOLE         reduce using rule 3 (statements -> statement .)
    NUMBER          reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    TRUE            reduce using rule 3 (statements -> statement .)
    FALSE           reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)
    error           reduce using rule 3 (statements -> statement .)
    DEFAULT         reduce using rule 3 (statements -> statement .)
    CASE            reduce using rule 3 (statements -> statement .)


state 5

    (6) statement -> expression .
    (10) statement -> expression . SEMICOLON
    (34) expression -> expression . QUESTION expression COLON expression
    (36) expression -> expression . PLUS term
    (37) expression -> expression . MINUS term
    (38) expression -> expression . GT term
    (39) expression -> expression . LT term
    (40) expression -> expression . GE term
    (41) expression -> expression . LE term
    (42) expression -> expression . EQUALS term
    (43) expression -> expression . NOTEQUALS term
    (44) expression -> expression . AND term
    (45) expression -> expression . OR term

    RETURN          reduce using rule 6 (statement -> expression .)
    VAR             reduce using rule 6 (statement -> expression .)
    LET             reduce using rule 6 (statement -> expression .)
    CONST           reduce using rule 6 (statement -> expression .)
    ID              reduce using rule 6 (statement -> expression .)
    FUNCTION        reduce using rule 6 (statement -> expression .)
    IF              reduce using rule 6 (statement -> expression .)
    WHILE           reduce using rule 6 (statement -> expression .)
    FOR             reduce using rule 6 (statement -> expression .)
    BREAK           reduce using rule 6 (statement -> expression .)
    SWITCH          reduce using rule 6 (statement -> expression .)
    TRY             reduce using rule 6 (statement -> expression .)
    THROW           reduce using rule 6 (statement -> expression .)
    LBRACKET        reduce using rule 6 (statement -> expression .)
    CONSOLE         reduce using rule 6 (statement -> expression .)
    NUMBER          reduce using rule 6 (statement -> expression .)
    STRING          reduce using rule 6 (statement -> expression .)
    LPAREN          reduce using rule 6 (statement -> expression .)
    NOT             reduce using rule 6 (statement -> expression .)
    TRUE            reduce using rule 6 (statement -> expression .)
    FALSE           reduce using rule 6 (statement -> expression .)
    LBRACE          reduce using rule 6 (statement -> expression .)
    $end            reduce using rule 6 (statement -> expression .)
    RBRACE          reduce using rule 6 (statement -> expression .)
    error           reduce using rule 6 (statement -> expression .)
    DEFAULT         reduce using rule 6 (statement -> expression .)
    CASE            reduce using rule 6 (statement -> expression .)
    SEMICOLON       shift and go to state 50
    QUESTION        shift and go to state 51
    PLUS            shift and go to state 52
    MINUS           shift and go to state 53
    GT              shift and go to state 54
    LT              shift and go to state 55
    GE              shift and go to state 56
    LE              shift and go to state 57
    EQUALS          shift and go to state 58
    NOTEQUALS       shift and go to state 59
    AND             shift and go to state 60
    OR              shift and go to state 61


state 6

    (7) statement -> declaration .
    (11) statement -> declaration . SEMICOLON

    RETURN          reduce using rule 7 (statement -> declaration .)
    VAR             reduce using rule 7 (statement -> declaration .)
    LET             reduce using rule 7 (statement -> declaration .)
    CONST           reduce using rule 7 (statement -> declaration .)
    ID              reduce using rule 7 (statement -> declaration .)
    FUNCTION        reduce using rule 7 (statement -> declaration .)
    IF              reduce using rule 7 (statement -> declaration .)
    WHILE           reduce using rule 7 (statement -> declaration .)
    FOR             reduce using rule 7 (statement -> declaration .)
    BREAK           reduce using rule 7 (statement -> declaration .)
    SWITCH          reduce using rule 7 (statement -> declaration .)
    TRY             reduce using rule 7 (statement -> declaration .)
    THROW           reduce using rule 7 (statement -> declaration .)
    LBRACKET        reduce using rule 7 (statement -> declaration .)
    CONSOLE         reduce using rule 7 (statement -> declaration .)
    NUMBER          reduce using rule 7 (statement -> declaration .)
    STRING          reduce using rule 7 (statement -> declaration .)
    LPAREN          reduce using rule 7 (statement -> declaration .)
    NOT             reduce using rule 7 (statement -> declaration .)
    TRUE            reduce using rule 7 (statement -> declaration .)
    FALSE           reduce using rule 7 (statement -> declaration .)
    LBRACE          reduce using rule 7 (statement -> declaration .)
    $end            reduce using rule 7 (statement -> declaration .)
    RBRACE          reduce using rule 7 (statement -> declaration .)
    error           reduce using rule 7 (statement -> declaration .)
    DEFAULT         reduce using rule 7 (statement -> declaration .)
    CASE            reduce using rule 7 (statement -> declaration .)
    SEMICOLON       shift and go to state 62


state 7

    (8) statement -> assignment .
    (12) statement -> assignment . SEMICOLON

    RETURN          reduce using rule 8 (statement -> assignment .)
    VAR             reduce using rule 8 (statement -> assignment .)
    LET             reduce using rule 8 (statement -> assignment .)
    CONST           reduce using rule 8 (statement -> assignment .)
    ID              reduce using rule 8 (statement -> assignment .)
    FUNCTION        reduce using rule 8 (statement -> assignment .)
    IF              reduce using rule 8 (statement -> assignment .)
    WHILE           reduce using rule 8 (statement -> assignment .)
    FOR             reduce using rule 8 (statement -> assignment .)
    BREAK           reduce using rule 8 (statement -> assignment .)
    SWITCH          reduce using rule 8 (statement -> assignment .)
    TRY             reduce using rule 8 (statement -> assignment .)
    THROW           reduce using rule 8 (statement -> assignment .)
    LBRACKET        reduce using rule 8 (statement -> assignment .)
    CONSOLE         reduce using rule 8 (statement -> assignment .)
    NUMBER          reduce using rule 8 (statement -> assignment .)
    STRING          reduce using rule 8 (statement -> assignment .)
    LPAREN          reduce using rule 8 (statement -> assignment .)
    NOT             reduce using rule 8 (statement -> assignment .)
    TRUE            reduce using rule 8 (statement -> assignment .)
    FALSE           reduce using rule 8 (statement -> assignment .)
    LBRACE          reduce using rule 8 (statement -> assignment .)
    $end            reduce using rule 8 (statement -> assignment .)
    RBRACE          reduce using rule 8 (statement -> assignment .)
    error           reduce using rule 8 (statement -> assignment .)
    DEFAULT         reduce using rule 8 (statement -> assignment .)
    CASE            reduce using rule 8 (statement -> assignment .)
    SEMICOLON       shift and go to state 63


state 8

    (9) statement -> method_call .
    (13) statement -> method_call . SEMICOLON
    (55) factor -> method_call .
